--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ httpx = "^0.22.0"
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
 mypy = "^0.931"
+requests = "^2.27.1"
+pytest-asyncio = "^0.18.2"
+asyncio = "^3.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
