--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,6 @@
+[mypy]
+namespace_packages = True
+
 [mypy-motor.*]
 ignore_missing_imports = True
 
@@ -16,4 +19,3 @@ ignore_missing_imports = True
 [mypy-uvicorn.*]
 ignore_missing_imports = True
 
-namespace_packages = True
