--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-decouple = "3.6"
 uvicorn = "0.17.4"
 config-path = "^1.0.2"
 httpx = "^0.22.0"
+edgedb = "^0.22.0"
 
 
 [tool.poetry.dev-dependencies]
