--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "0.17.4"
 config-path = "^1.0.2"
 httpx = "^0.22.0"
 edgedb = "^0.22.0"
+pytz = "^2021.3"
 
 
 [tool.poetry.dev-dependencies]
