--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ edgedb = "^0.22.0"
 pytz = "^2021.3"
 loguru = "^0.6.0"
 
+[tool.poetry.scripts]
+starling_server = 'starling_server.main:run'
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
