--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ httpx = "^0.22.0"
 edgedb = "^0.22.0"
 pytz = "^2021.3"
 loguru = "^0.6.0"
+Sphinx = "^4.4.0"
+sphinx-rtd-theme = "^1.0.0"
+cleo = "^0.8.1"
 
 [tool.poetry.scripts]
 starling_server = 'starling_server.main:run'
