--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Richard <richlyon@mac.com>"]
 python = "^3.10"
 fastapi = "0.73.0"
 motor = "2.5.1"
-pydantic = {extras = ["email"], version = "^1.9.0"}
+pydantic = { extras = ["email"], version = "^1.9.0" }
 python-decouple = "3.6"
 uvicorn = "0.17.4"
 config-path = "^1.0.2"
@@ -21,7 +21,7 @@ sphinx-rtd-theme = "^1.0.0"
 cleo = "^0.8.1"
 
 [tool.poetry.scripts]
-starling_server = 'starling_server.main:run'
+bank_server = 'starling_server.cli.cli:cli'
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
