--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ mypy = "^0.931"
 requests = "^2.27.1"
 pytest-asyncio = "^0.18.2"
 asyncio = "^3.4.3"
+pytest-mock = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
