--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Sphinx = "^4.4.0"
 sphinx-rtd-theme = "^1.0.0"
 cleo = "^0.8.1"
 toml = "^0.10.2"
+python-configuration = "^0.8.2"
 
 [tool.poetry.scripts]
 bank_server = 'starling_server.cli.cli:cli'
